# power-remote-dt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
crates/client/: Cargo.toml  build.rs
crates/client/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: keypair.rs  known_hosts.rs  known_peers.rs  lib.rs  session.rs
crates/filetransfer/: Cargo.toml
crates/filetransfer/src/: lib.rs
crates/filetransfer/tests/: bidirectional_loopback.rs
crates/gui-client/: Cargo.toml
crates/gui-client/src/: app.rs  elevate.rs  lib.rs
crates/gui-common/: Cargo.toml
crates/gui-common/locales/en/: main.ftl
crates/gui-common/locales/ja/: main.ftl
crates/gui-common/src/: auth_config.rs  config.rs  crashlog.rs  i18n.rs  lib.rs  log_tail.rs  paths.rs  qr.rs  style.rs  theme.rs
crates/gui-host/: Cargo.toml  build.rs
crates/gui-host/resources/: .gitkeep
crates/gui-host/src/: app.rs  auth_settings.rs  autostart.rs  consent_channel.rs  consent_prompt.rs  keygen.rs  lib.rs  notif.rs  onboarding.rs  settings.rs  tray.rs  update.rs
crates/gui-viewer/: Cargo.toml  build.rs
crates/gui-viewer/src/: app.rs  connect_form.rs  hosts_list.rs  lib.rs  online_probe.rs  settings.rs
crates/host/: Cargo.toml
crates/host/src/: auth.rs  auth_config.rs  dxgi_sw_producer.rs  encoder_dispatch.rs  lib.rs  main.rs  status.rs  watchdog.rs
crates/host/src/platform/: linux.rs  mod.rs  win.rs
crates/host/tests/: auth_integration.rs  linux_startup_smoke.rs  request_idr_handler_smoke.rs  setbitrate_handler_smoke.rs
crates/input-linux/: Cargo.toml
crates/input-linux/src/: core_adapter.rs  error.rs  lib.rs  uinput_injector.rs  x11_clipboard.rs  x11_geometry.rs
crates/input-win/: Cargo.toml
crates/input-win/src/: capturer.rs  clipboard.rs  core_adapter.rs  desktop.rs  injector.rs  lib.rs
crates/input-win/tests/: core_adapter_smoke.rs
crates/latency-bench/: Cargo.toml  build.rs
crates/latency-bench/src/: full_pipeline.rs  lib.rs  main.rs
crates/latency-bench/tests/: full_pipeline_openh264.rs
crates/media-ffmpeg/: Cargo.toml  build.rs
crates/media-ffmpeg/examples/: gen_byte_stable_fixture.rs
crates/media-ffmpeg/src/: core_adapter.rs  cuda_hwdevice.rs  cuda_hwframes.rs  cuda_npp.rs  decoder_common.rs  error.rs  hdr10_sei.rs  hevc_nvdec_decoder.rs  hevc_nvdec_main10_decoder.rs  hevc_nvenc_encoder.rs  hevc_nvenc_main10_encoder.rs  hevc_nvenc_npp_encoder.rs  hevc_sw_decoder.rs  hevc_sw_main10_decoder.rs  hevc_vaapi_decoder.rs  hevc_vaapi_encoder.rs  hevc_vaapi_main10_decoder.rs  hevc_vaapi_main10_encoder.rs  hwdevice.rs  hwframes.rs  lib.rs  nvenc_common.rs  options.rs
crates/media-ffmpeg/tests/: main10_decode.rs
crates/media-ffmpeg/tests/fixtures/: README.md
crates/media-linux/: Cargo.toml
crates/media-linux/examples/: dump_enum_format.rs
crates/media-linux/src/: capture_source.rs  core_adapter.rs  error.rs  frame.rs  i420_to_bgra.rs  lib.rs  linux_sw_producer.rs  policy.rs  sw_pipeline.rs  vaapi_pipeline.rs  x11_capture.rs
crates/media-linux/src/wayland_portal/: capturer.rs  cursor.rs  dmabuf.rs  format.rs  mod.rs  pod_builder.rs  session.rs  stream.rs  token.rs
crates/media-linux/tests/: capture_source_contract.rs  format_golden.rs
crates/media-policy/: Cargo.toml
crates/media-policy/src/: capability.rs  driver.rs  factory.rs  health.rs  lib.rs  selection.rs
crates/media-policy/tests/: policy_driven_swap.rs
crates/media-sw/: Cargo.toml  README.md
crates/media-sw/src/: decoder.rs  encoder.rs  error.rs  lib.rs  nv12.rs  traits.rs
crates/media-vaapi/: Cargo.toml
crates/media-vaapi/src/: annexb.rs  display.rs  encoder.rs  error.rs  frame_input.rs  lib.rs  rc.rs
crates/media-win/: Cargo.toml  build.rs
crates/media-win/src/: adapter.rs  core_adapter.rs  cpu_i420_upload.rs  cpu_p010_upload.rs  encoder_trait.rs  error.rs  lib.rs  platform.rs  policy.rs  synthetic.rs
crates/media-win/src/d3d11/: bgra_to_nv12.rs  cursor_overlay.rs  device.rs  dual_plane_renderer.rs  mod.rs  nv12_renderer.rs  nv12_shader_renderer.rs  nv12_shader_renderer_p010.rs  swapchain.rs  texture.rs
crates/media-win/src/dxgi/: duplication.rs  mod.rs  output.rs
crates/media-win/src/ffmpeg/: hdr10_sei_win.rs  hdr10_sidedata.rs  (+5 more)
crates/media-win/tests/: capture_smoke.rs  core_adapter_smoke.rs  decoder_smoke.rs  hdr10_parity.rs  mf_main10_decode.rs  nvenc_smoke.rs  pipeline_smoke.rs  smoke.rs  zerocopy_compare_smoke.rs
crates/nat-traversal/: Cargo.toml
crates/nat-traversal/src/: error.rs  lib.rs  stun.rs  turn.rs  turn_socket.rs
crates/nat-traversal/tests/: mock_stun.rs  mock_turn.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: clock.rs  control.rs  error.rs  frame.rs  input.rs  lib.rs  video_pipeline.rs  wire.rs
crates/protocol/tests/: roundtrip.rs
crates/signaling-client/: Cargo.toml
crates/signaling-client/src/: config.rs  error.rs  lib.rs  net.rs  probe.rs  rendezvous.rs
crates/signaling-client/tests/: error_mapping.rs  mock_host_flow.rs  mock_viewer_flow.rs  timeout_stages.rs  w1_smoke.rs  w2_peer_candidates.rs  w2_smoke.rs  w2_stun_mock_host.rs  w3_smoke.rs  w4_smoke.rs  w5_smoke.rs
crates/signaling-proto/: Cargo.toml
crates/signaling-proto/src/: lib.rs
crates/signaling-proto/tests/: roundtrip.rs  wire_format.rs
crates/signaling-server/: Cargo.toml
crates/signaling-server/src/: host_store.rs  lib.rs  main.rs  state.rs  ws.rs
crates/signaling-server/tests/: server_tests.rs
crates/transport/: Cargo.toml
crates/transport/src/: assembler.rs  bitrate_control.rs  error.rs  fec.rs  handshake.rs  idr_loss_test.rs  lib.rs  loopback.rs  packetize.rs  transport_trait.rs  udp.rs
crates/transport/tests/: adaptive_bitrate_test.rs  encrypted_test.rs  loopback_test.rs  probe_retry.rs  probe_test.rs  reset_session.rs  udp_test.rs
crates/viewer/: Cargo.toml  build.rs
crates/viewer-overlay/: Cargo.toml  build.rs
crates/viewer-overlay/src/: app.rs  ipc.rs  main.rs
crates/viewer/src/: cursor_state.rs  latency.rs  lib.rs  main.rs  overlay_ipc.rs  overlay_supervisor.rs
crates/viewer/tests/: input_map_tests.rs  linux_connect_smoke.rs
(+176 files in other folders)
