[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/media-core",
    "crates/input-core",
    "crates/transport",
    "crates/media-win",
    "crates/media-linux",
    "crates/input-win",
    "crates/input-linux",
    "crates/host",
    "crates/viewer",
    "crates/latency-bench",
    "crates/crypto",
    "crates/audio",
    "crates/filetransfer",
    "crates/signaling-proto",
    "crates/signaling-client",
    "crates/signaling-server",
    "crates/nat-traversal",
    "crates/gui-common",
    "crates/gui-host",
    "crates/gui-viewer",
    "crates/viewer-overlay",
    "crates/media-sw",
    "crates/media-vaapi",
    "crates/media-ffmpeg",
    "crates/client",
    "crates/gui-client",
    "crates/media-policy",
]

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
# Async / IO
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }

# Serialization
bincode = "1.3"
bytes = "1.7"
serde = { version = "1.0", features = ["derive"] }

# FEC
reed-solomon-erasure = "6.0"

# Error & logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
proptest = "1.5"

# Signaling
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws"] }
serde_json = "1"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
url = "2"
base64 = "0.22"

# STUN
stun_codec = "0.3"
bytecodec = "0.4"

# TURN auth
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# GUI (Phase 4 G1; GUI modernization P1: egui 0.28→0.32).
# Renderer: glow (OpenGL), which is eframe 0.32's default and works on every
# target without extra setup. We previously tried the wgpu renderer, but
# eframe gates the wgpu *backends* (vulkan/gl/dx12/metal) behind
# `egui-wgpu?/default`, which lives in eframe's `default` feature set — and we
# build with `default-features = false`. That shipped a wgpu instance with no
# backend enabled, so the launcher aborted at startup with "No wgpu backend
# feature ... was enabled" on Windows and Linux. glow has no such footgun. The
# viewer's in-session GPU path keeps its own (correctly-featured) wgpu dep.
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland"] }
egui = "0.32"
qrcode = "0.14"
rfd = "0.17"
toml = "0.8"
dirs = "5.0"

# i18n (Phase 4 G6)
fluent-templates = "0.9"
sys-locale = "0.3"
unic-langid = "0.9"

# Phase 4 G3 (tray + notifications + autostart)
tray-icon = "0.14"
notify-rust = "4"
winreg = "0.52"
image = { version = "0.25", default-features = false, features = ["png"] }

# Phase 4 G4 (MSI + auto-update)
self_update = { version = "0.41", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }
semver = "1"

# Phase 4 G5 (crash reporter timestamps)
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# L1: Linux backend
x11rb = "0.13"
softbuffer = "0.4"
nix = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
debug = "line-tables-only"
strip = "none"

[profile.dev]
opt-level = 1       # テストが 4K60 相当のバッファ処理で時間かかりすぎないように
# panic is left default (unwind) so proptest shrinking and #[should_panic] work

[workspace.metadata.wix]
# cargo-wix produces MSI artifacts under target/wix.
# Configuration lives in wix/main.wxs.
