[package]
name = "prdt-client"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "prdt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { workspace = true }

[target.'cfg(windows)'.dependencies]
prdt-host = { path = "../host", default-features = false }
prdt-viewer = { path = "../viewer" }
prdt-gui-client = { path = "../gui-client" }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-host = { path = "../host", default-features = false }
prdt-viewer = { path = "../viewer" }

[features]
# Default keeps cros-libva-backed VAAPI H.264 (existing CI behaviour).
# Arch users override with `--no-default-features --features
# ffmpeg-encode-hevc-vaapi-ffmpeg7` because cros-libva 0.0.13 doesn't compile
# against libva ≥ 2.22.
default = ["vaapi-h264"]
vaapi-h264 = ["prdt-host/vaapi-h264"]

# Forward the host's FFmpeg HEVC VAAPI feature so smoke-test builds of the
# unified `prdt` binary can be produced via `cargo build -p prdt-client
# --features ffmpeg-encode-hevc-vaapi`. The host's compile_error! on non-Linux
# targets remains the hard gate. The -ffmpeg6 / -ffmpeg7 variants select
# rusty_ffmpeg's pre-generated bindings for those FFmpeg majors so the
# resulting binary links cleanly against system libavcodec on Ubuntu 24.04
# (ffmpeg6) or Arch (ffmpeg7) without library-not-found errors at runtime.
ffmpeg-encode-hevc-vaapi = ["prdt-host/ffmpeg-encode-hevc-vaapi"]
ffmpeg-encode-hevc-vaapi-ffmpeg6 = ["prdt-host/ffmpeg-encode-hevc-vaapi-ffmpeg6"]
ffmpeg-encode-hevc-vaapi-ffmpeg7 = ["prdt-host/ffmpeg-encode-hevc-vaapi-ffmpeg7"]
ffmpeg-encode-hevc-nvenc = ["prdt-host/ffmpeg-encode-hevc-nvenc"]
ffmpeg-encode-hevc-nvenc-ffmpeg5 = ["prdt-host/ffmpeg-encode-hevc-nvenc-ffmpeg5"]
ffmpeg-encode-hevc-nvenc-ffmpeg7 = ["prdt-host/ffmpeg-encode-hevc-nvenc-ffmpeg7"]
# P2.5 — NPP (GPU BGRA→NV12) variants. Shallow forwards onto prdt-host.
ffmpeg-encode-hevc-nvenc-npp = ["prdt-host/ffmpeg-encode-hevc-nvenc-npp"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg5 = ["prdt-host/ffmpeg-encode-hevc-nvenc-npp-ffmpeg5"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg7 = ["prdt-host/ffmpeg-encode-hevc-nvenc-npp-ffmpeg7"]
# P3.1 — HEVC Main10 (10-bit) encode variants. Shallow forwards onto prdt-host.
ffmpeg-encode-hevc-vaapi-main10 = ["prdt-host/ffmpeg-encode-hevc-vaapi-main10"]
ffmpeg-encode-hevc-vaapi-main10-ffmpeg5 = ["prdt-host/ffmpeg-encode-hevc-vaapi-main10-ffmpeg5"]
ffmpeg-encode-hevc-vaapi-main10-ffmpeg7 = ["prdt-host/ffmpeg-encode-hevc-vaapi-main10-ffmpeg7"]
ffmpeg-encode-hevc-nvenc-main10 = ["prdt-host/ffmpeg-encode-hevc-nvenc-main10"]
ffmpeg-encode-hevc-nvenc-main10-ffmpeg5 = ["prdt-host/ffmpeg-encode-hevc-nvenc-main10-ffmpeg5"]
ffmpeg-encode-hevc-nvenc-main10-ffmpeg7 = ["prdt-host/ffmpeg-encode-hevc-nvenc-main10-ffmpeg7"]

# P2 — HEVC decode forwarded onto prdt-host (which forwards onto
# prdt-media-linux). The unified `prdt` binary can then be built with e.g.
# `cargo build -p prdt-client --features ffmpeg-decode-hevc-vaapi-ffmpeg5`.
ffmpeg-decode-hevc-sw = ["prdt-host/ffmpeg-decode-hevc-sw"]
ffmpeg-decode-hevc-sw-ffmpeg5 = ["prdt-host/ffmpeg-decode-hevc-sw-ffmpeg5"]
ffmpeg-decode-hevc-sw-ffmpeg6 = ["prdt-host/ffmpeg-decode-hevc-sw-ffmpeg6"]
ffmpeg-decode-hevc-sw-ffmpeg7 = ["prdt-host/ffmpeg-decode-hevc-sw-ffmpeg7"]
ffmpeg-decode-hevc-vaapi = ["prdt-host/ffmpeg-decode-hevc-vaapi"]
ffmpeg-decode-hevc-vaapi-ffmpeg5 = ["prdt-host/ffmpeg-decode-hevc-vaapi-ffmpeg5"]
ffmpeg-decode-hevc-vaapi-ffmpeg6 = ["prdt-host/ffmpeg-decode-hevc-vaapi-ffmpeg6"]
ffmpeg-decode-hevc-vaapi-ffmpeg7 = ["prdt-host/ffmpeg-decode-hevc-vaapi-ffmpeg7"]
ffmpeg-decode-hevc-nvdec = ["prdt-host/ffmpeg-decode-hevc-nvdec"]
ffmpeg-decode-hevc-nvdec-ffmpeg5 = ["prdt-host/ffmpeg-decode-hevc-nvdec-ffmpeg5"]
ffmpeg-decode-hevc-nvdec-ffmpeg6 = ["prdt-host/ffmpeg-decode-hevc-nvdec-ffmpeg6"]
ffmpeg-decode-hevc-nvdec-ffmpeg7 = ["prdt-host/ffmpeg-decode-hevc-nvdec-ffmpeg7"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
