[package]
name = "prdt-crypto"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
thiserror = { workspace = true }
base64 = "0.22"
rand_core = "0.6"
tracing = { workspace = true }
prdt-protocol = { path = "../protocol" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
