[package]
name = "prdt-gui-client"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prdt-gui-common = { path = "../gui-common" }
eframe = { workspace = true }
egui = { workspace = true }
anyhow = "1"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
# GUI modernization P2: the unified launcher is now cross-platform (Linux +
# Windows). These deps moved out of [target.'cfg(windows)'] — ClientApp's
# logic is platform-neutral (spawns `prdt connect`, runs the host listener
# via tokio), so the previous Windows-only gating was a scope decision, not a
# technical constraint.
prdt-host = { path = "../host", default-features = false }
prdt-viewer = { path = "../viewer" }
prdt-gui-host = { path = "../gui-host" }
prdt-crypto = { path = "../crypto" }
prdt-protocol = { path = "../protocol" }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
