[package]
name = "prdt-gui-common"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
qrcode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
