[package]
name = "prdt-gui-common"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
qrcode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fluent-templates = { workspace = true }
sys-locale = { workspace = true }
unic-langid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
prdt-protocol = { path = "../protocol" }
bcrypt = "0.15"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
