[package]
name = "prdt-gui-host"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prdt-gui-common = { path = "../gui-common" }
prdt-protocol = { path = "../protocol" }
prdt-crypto = { path = "../crypto" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"
rfd = { workspace = true }
tray-icon = { workspace = true }
notify-rust = { workspace = true }
image = { workspace = true }
self_update = { workspace = true }
semver = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[build-dependencies]
image = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
