[package]
name = "prdt-gui-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prdt-gui-common = { path = "../gui-common" }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
