[package]
name = "prdt-gui-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prdt-gui-common = { path = "../gui-common" }
prdt-signaling-client = { path = "../signaling-client" }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
anyhow = "1"
tokio = { workspace = true }

[features]
# Decode-backend marker features, mirrored from prdt-viewer's `*-any` markers.
# prdt-viewer forwards its own markers onto these (see crates/viewer/Cargo.toml)
# so that `supported_decoder_args()` in this launcher reflects exactly the
# `--decoder` values the surrounding viewer build accepts — without a direct
# dependency on prdt-viewer (which would form a dependency cycle, since
# prdt-viewer already depends on this crate for the Windows launcher).
ffmpeg-decode-hevc-sw-any = []
ffmpeg-decode-hevc-vaapi-any = []
ffmpeg-decode-hevc-nvdec-any = []
ffmpeg-decode-hevc-sw-main10-any = []
ffmpeg-decode-hevc-vaapi-main10-any = []
ffmpeg-decode-hevc-nvdec-main10-any = []
media-win-ffmpeg-nvdec-any = []
media-win-ffmpeg-nvdec-main10-any = []

[dev-dependencies]
tempfile = "3"

[lints.rust]
# `supported_decoder_args` gates native `nvdec` on `prdt_nvdec_bindings`. This
# crate has no build.rs that sets it (unlike prdt-viewer, whose build.rs sets
# it when the NVIDIA SDK + CUDA are present), so declare it known to avoid an
# unexpected-cfg warning. It stays unset here → `nvdec` is hidden in the
# launcher, which is intended.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(prdt_nvdec_bindings)'] }
