[package]
name = "prdt-host"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PR5a: this crate is now lib-only. The legacy prdt-host.exe shim was
# removed; users invoke `prdt host [...]` via the prdt-client bin, which
# calls into prdt_host::run_with_args directly.

[dependencies]
prdt-audio = { path = "../audio" }
prdt-gui-common = { path = "../gui-common" }
prdt-media-policy = { path = "../media-policy" }
prdt-crypto = { path = "../crypto" }
prdt-filetransfer = { path = "../filetransfer" }
prdt-nat-traversal = { path = "../nat-traversal" }
prdt-protocol = { path = "../protocol" }
prdt-signaling-client = { path = "../signaling-client" }
prdt-signaling-proto = { path = "../signaling-proto" }
prdt-transport = { path = "../transport" }
prdt-gui-host = { path = "../gui-host" }
prdt-media-core = { path = "../media-core", optional = true }
prdt-media-ffmpeg = { path = "../media-ffmpeg", optional = true }
tokio = { workspace = true, features = ["signal", "fs", "io-util", "time"] }
url = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
dirs = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
bcrypt = "0.15"
subtle = "2"
serde.workspace = true
toml.workspace = true
async-trait = "0.1"

[features]
# Default keeps existing CI / release behaviour: pulls cros-libva for the
# legacy VAAPI H.264 encoder. Disable via `--no-default-features` on systems
# where cros-libva 0.0.13 can't build against the system libva (e.g. Arch
# rolling, libva ≥ 2.22).
default = ["vaapi-h264"]
vaapi-h264 = ["prdt-media-linux/vaapi-h264"]
ffmpeg-encode-hevc-vaapi = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-vaapi", "ffmpeg-encode-hevc-vaapi-any"]
ffmpeg-encode-hevc-vaapi-ffmpeg6 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-vaapi-ffmpeg6", "ffmpeg-encode-hevc-vaapi-any"]
ffmpeg-encode-hevc-vaapi-ffmpeg7 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-vaapi-ffmpeg7", "ffmpeg-encode-hevc-vaapi-any"]
# Marker feature enabled by all three VAAPI ABI variants; use in cfg() so any
# ABI choice activates VAAPI code paths and tests.
ffmpeg-encode-hevc-vaapi-any = []
ffmpeg-encode-hevc-nvenc = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc", "ffmpeg-encode-hevc-nvenc-any"]
ffmpeg-encode-hevc-nvenc-ffmpeg5 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc-ffmpeg5", "ffmpeg-encode-hevc-nvenc-any"]
ffmpeg-encode-hevc-nvenc-ffmpeg7 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc-ffmpeg7", "ffmpeg-encode-hevc-nvenc-any"]
# Marker feature enabled by all three NVENC ABI variants above; use this in
# cfg() attributes so any ABI choice activates NVENC code paths and tests.
ffmpeg-encode-hevc-nvenc-any = []
# P2.5 — NPP (GPU BGRA→NV12) variants. Shallow forwards onto media-ffmpeg;
# the transitive NVENC enablement happens at the media-ffmpeg layer per the
# dep chain in that crate's [features] block.
ffmpeg-encode-hevc-nvenc-npp = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc-npp", "ffmpeg-encode-hevc-nvenc-npp-any"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg5 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc-npp-ffmpeg5", "ffmpeg-encode-hevc-nvenc-npp-any"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg7 = ["dep:prdt-media-core", "dep:prdt-media-ffmpeg", "prdt-media-ffmpeg/ffmpeg-encode-hevc-nvenc-npp-ffmpeg7", "ffmpeg-encode-hevc-nvenc-npp-any"]
ffmpeg-encode-hevc-nvenc-npp-any = []

# P2 — HEVC decode features forwarded onto prdt-media-linux. The viewer pulls
# prdt-media-linux transitively (Linux platform consumer construction lives
# there), so to keep the feature graph reachable from `prdt` the host crate
# forwards the same backend × ABI matrix the encoder uses. Three backends
# (sw / vaapi / nvdec) × four ABI variants (unsuffixed default = ffmpeg6,
# explicit -ffmpeg5 / -ffmpeg6 / -ffmpeg7), plus a per-backend `-any` marker.
ffmpeg-decode-hevc-sw = ["prdt-media-linux/ffmpeg-decode-hevc-sw", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg5", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg6", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg7", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-any = []
ffmpeg-decode-hevc-vaapi = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg5", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg6", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg7", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-any = []
ffmpeg-decode-hevc-nvdec = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg5", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg6", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg7", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-any = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
tempfile = "3"
clap = { workspace = true }
bincode = { workspace = true }
# Used by Linux tests that toggle PRDT_PREFER_NVENC to assert auto-encoder
# resolution; cross-test env-var pollution would otherwise flip the
# both-features cfg arm in unpredictable ways.
serial_test = "3"
# Log-capture assertion for A11 tracing::info! field checks in normalize_encoder tests.
tracing-test = "0.2"

[target.'cfg(windows)'.dependencies]
prdt-media-win = { path = "../media-win" }
prdt-media-sw = { path = "../media-sw" }
prdt-input-win = { path = "../input-win" }
tokio-util = { version = "0.7", features = ["rt"] }
prdt-gui-common = { path = "../gui-common" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(prdt_nvdec_bindings)', 'cfg(prdt_nvenc_bindings)'] }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-linux = { path = "../media-linux", default-features = false }
prdt-input-linux = { path = "../input-linux" }
prdt-media-sw = { path = "../media-sw" }
tokio-util = { version = "0.7", features = ["rt"] }
