[package]
name = "prdt-input-linux"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prdt-input-core = { path = "../input-core" }
prdt-protocol = { path = "../protocol" }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { workspace = true }
nix = { workspace = true, features = ["ioctl", "fs"] }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
tempfile = "3"
