[package]
name = "prdt-input-win"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
prdt-protocol = { path = "../protocol" }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1"
winit = "0.30"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

[target.'cfg(windows)'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
