[package]
name = "prdt-latency-bench"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "prdt_latency_bench"
path = "src/lib.rs"

[[bin]]
name = "prdt-latency-bench"
path = "src/main.rs"

[[bin]]
name = "prdt-bench-matrix"
path = "src/bin/bench-matrix.rs"

[[bin]]
name = "prdt-fec-bench"
path = "src/bin/fec-bench.rs"

[[bin]]
name = "prdt-input-load-bench"
path = "src/bin/input-load-bench.rs"

[[bin]]
name = "prdt-net-profile-bench"
path = "src/bin/net-profile-bench.rs"

[dependencies]
prdt-protocol = { path = "../protocol" }
prdt-transport = { path = "../transport" }
prdt-media-sw = { path = "../media-sw" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
anyhow = "1"
humantime = "2"
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(windows)'.dependencies]
prdt-media-win = { path = "../media-win" }

[dev-dependencies]
tempfile = "3"
